# tradingview-strategy-risk-lab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: leakage_policy.md
docs/samples/: strategy_risk_report.typ
examples/: run_demo.py  trades.csv
outputs/: manifest.json  risk_report.json
src/tradingview_strategy_risk_lab/: __init__.py  api.py  cli.py  data.py  explainability.py  kaggle_data.py  reporting.py  schemas.py  trainer.py
tests/: test_api.py  test_leakage_policy.py  test_reporting.py  test_training.py
