[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingview-strategy-risk-lab"
version = "0.1.0"
description = "Litestar service for training strategy-risk models from TradingView exports with SHAP and DiCE explanations."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Emir Huseyin Inci" }]
dependencies = [
    "kaggle>=1.6",
    "litestar>=2.13",
    "numba>=0.59",
    "numpy>=1.26",
    "pandas>=2.2",
    "pandera>=0.21",
    "pydantic>=2.7",
    "scikit-learn>=1.4",
    "shap>=0.46",
    "typer>=0.12",
    "uvicorn>=0.30",
    "xgboost>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
tv-risk-lab = "tradingview_strategy_risk_lab.cli:app"
tv-risk-report = "tradingview_strategy_risk_lab.reporting:main"
tv-risk-prepare-kaggle = "tradingview_strategy_risk_lab.kaggle_data:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=.pytest_tmp --cov=tradingview_strategy_risk_lab --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["B008"]
